<resources>
    <string name="app_name">Circle</string>
    <string name="first_name">First Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="enable_geolocation">Enable Geolocation?</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="view_guestlist">View Guestlist</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="reuse_qr_code">Reuse QR Code (Check-In Only)</string>
    <string name="Default_event_poster_URL"><![CDATA[https://firebasestorage.googleapis.com/v0/b/circleapp-2e84b.appspot.com/o/default_pics%2Fdefault_event_poster2.webp?alt=media&token=2a78f078-6ccf-41af-895a-7c153aca2ed4]]></string>
    <string name="api_key">AIzaSyC2wrE2_0v5bsfZ0KHFVHhEphdmw6yrbvo</string>
    <string name="Dash">" - "</string>
    <string name="image_type_pfp">Profile Picture</string>
    <string name="image_type_poster">Event Poster</string>
    <string name="not_specified">Not specified</string>
    <string name="unregister">Unregister</string>
    <string name="unavailable">Unavailable</string>
    <string name="description">Description</string>
    <string name="capacity">Capacity:</string>
    <string name="image_layout">image layout</string>
    <string name="_0">0</string>
    <string name="event_announcements">Event Announcements</string>
    <string name="there_are_no_announcements_at_this_time">There are no announcements at this time</string>
    <string name="event_location">Event Location</string>
    <string name="add_event">Add Event</string>
    <string name="title">Title:</string>
    <string name="my_event_max_50_chars">My Event (max 50 chars.)</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="add_a_description_for_your_event">Add a description for your event:</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="xx_xx">XX:XX</string>
    <string name="max_500_chars">max 500 chars.</string>
    <string name="number_of_guests_allowed">Number of Guests Allowed</string>
    <string name="click_to_select_a_poster_image">Click to Select a Poster Image</string>
    <string name="create_event">Create Event</string>
    <string name="scan_this_qr_code_to_get_the_data">Scan this QR code to get the data</string>
    <string name="share_this_qr_code">Share this QR code</string>
    <string name="homepage">Homepage</string>
    <string name="confirm">Confirm</string>
    <string name="ex_myblog_com">ex. myblog.com</string>
    <string name="ex_iseeyou_gmail_com">ex. iseeyou@gmail.com</string>
    <string name="ex_1234567890">ex. 1234567890</string>
    <string name="ex_doe">ex. Doe</string>
    <string name="ex_john">ex. John</string>
    <string name="send_attendees_of_your_event_a_notification">Send attendees of your event a notification!</string>
    <string name="max_50_chars">max. 50 chars</string>
    <string name="a_title_to_let_attendees_know_what_you_are_notifying_them_about">A title to let attendees know what you are notifying them about.</string>
    <string name="body">Body</string>
    <string name="write_what_you_are_going_to_let_your_attendees_know">Write what you are going to let your attendees know.</string>
    <string name="send">Send</string>
    <string name="max_200_chars">max. 200 chars</string>
    <string name="user_details">User Details</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="xxx_xxx_xxxx">XXX-XXX-XXXX</string>
    <string name="android_user_com">android@user.com</string>
    <string name="https_www_google_ca">https://www.google.ca</string>
    <string name="enter_password">Enter password</string>
    <string name="message">Message</string>
    <string name="date_time">Date/Time</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="checked_in_0_times">Checked in 0 times</string>
    <string name="enter_announcement">Enter announcement</string>
    <string name="add">Add</string>
    <string name="_00_00">00:00</string>
    <string name="event">Event</string>
    <string name="event_details">Event details</string>
    <string name="browse_profiles">Browse Profiles</string>
    <string name="browse_events">Browse Events</string>
    <string name="browse_images">Browse Images</string>
    <string name="map_view">Map View</string>
    <string name="notify_attendees">Notify attendees</string>
    <string name="make_a_profile">Make A Profile</string>
    <string name="add_your_profile_details_here_to_let_others_know_who_s_attending_their_events">Add your profile details here to let others know who\'s attending their events!</string>
    <string name="add_details">Add Details</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="admin_view">Admin View</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="image_type">Image Type</string>
    <string name="user_view">User View</string>

</resources>