<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startup_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <TextView
        android:id="@+id/make_a_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/make_a_profile"
        android:textAlignment="center"
        android:textColor="#6C5F5F"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/make_pf_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_below="@id/make_a_profile"
        android:text="@string/add_your_profile_details_here_to_let_others_know_who_s_attending_their_events"
        android:textAlignment="center"
        android:textColor="#756C6C"
        android:textSize="30sp" />

    <Button
        android:id="@+id/add_profile_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/make_pf_description"
        android:layout_centerInParent="true"
        android:text="@string/add_details"
        android:textSize="15sp" />

</RelativeLayout>