<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/make_my_profile"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.MakeProfileActivity">

    <EditText
        android:id="@+id/fname_edit"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/lname_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/lname_edit"
        android:layout_width="216dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/edit_number"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="349dp"
        android:layout_height="52dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pfp" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="347dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number" />

    <TextView
        android:id="@+id/edit_profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Making a profile"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <ImageView
        android:id="@+id/edit_pfp"
        android:layout_width="141dp"
        android:layout_height="151dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="448dp"
        android:src="@drawable/ic_profile_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_text"
        app:layout_constraintVertical_bias="0.13" />

    <CheckBox
        android:id="@+id/edit_geolocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enable_geolocation"
        android:textSize="18sp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/confirm_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="106dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>