<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/event_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:text="Event Name"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/event_details_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_name"
        android:textSize="20sp"
        tools:text="Event Location"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/event_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_location"
        android:textSize="20sp"
        tools:text="Event Date"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/event_details_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_date"
        android:textSize="20sp"
        tools:text="Event Time"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/event_details_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_time"
        android:textSize="18sp"
        tools:text="Event Description"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/event_details_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_details_description"
        android:textSize="18sp"
        tools:text="Guests allowed"
        android:layout_marginBottom="24dp"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rectangular_background"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_below="@id/event_details_capacity"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/pastel_purple"
        android:contentDescription="image layout"
        app:strokeWidth="3dp"
        app:strokeColor="@color/black">

        <ImageView
            android:id="@+id/event_details_poster"
            android:layout_width="385dp"
            android:layout_height="match_parent"
            android:focusable="true"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/back" />

    <Button
        android:id="@+id/generate_qr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rectangular_background"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="95dp"
        android:text="@string/generate_qr_code" />


    <Button
        android:id="@+id/reuse_qr_button"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_below="@id/generate_qr_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/reuse_qr_code" />

    <Button
        android:id="@+id/guestlist_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/reuse_qr_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="129dp"
        android:text="@string/view_guestlist" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/register" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </FrameLayout>

</RelativeLayout>